# dupblaster

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  release.toml
.github/workflows/: check.yml
bench-compare/: Cargo.toml
bench-compare/src/: main.rs
benchmark-pipeline/: .gitignore  README.md  Snakefile  install.sh  pixi.toml  run.sh
benchmark-pipeline/published-results/: bench-aarch64.tsv  bench-x86.tsv
benchmark-pipeline/workflow/scripts/: collate_bench.py  parse_gnu_time.py
examples/: prefetch_bench.rs
src/: cigar.rs  dedup.rs  io_threading.rs  main.rs  metrics.rs  raw_reader.rs  raw_writer.rs  sam_reader.rs  sig.rs
tests/: test_bam.rs  test_compression.rs  test_dup_propagation.rs  test_input_validation.rs  test_library.rs  test_mate_tags.rs  test_methylation_mode.rs  test_pair_semantics.rs  test_pg_chain.rs  test_picard_exact.rs  test_query_grouped_check.rs  test_single_end_strategy.rs  test_soft_clipping.rs  test_stats.rs  test_stress.rs  test_unmapped_orphan_semantics.rs  test_unmated.rs  test_usage_footer.rs  test_version.rs
tests/helpers/: mod.rs
